tests/spec/type_errors/empty_map_hint.fable
// `{}` is an empty block; the empty map is `{:}`. The error says so.
//? error: `{}` is an empty block, not an empty map
let m: Map[String, Int] = {};
println(m.len());
